[gd_scene load_steps=13 format=2]

[ext_resource path="res://GUI/Toggle/Textures/toggle_background.png" type="Texture" id=1]
[ext_resource path="res://GUI/Toggle/Textures/toggle_background_disabled.png" type="Texture" id=2]
[ext_resource path="res://Assets/Themes/Font_Light.tres" type="DynamicFont" id=3]
[ext_resource path="res://GUI/Toggle/Toggle.gd" type="Script" id=4]
[ext_resource path="res://GUI/Toggle/Textures/toggle_icon_on.png" type="Texture" id=5]
[ext_resource path="res://GUI/Toggle/Textures/toggle_icon_off.png" type="Texture" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="Toggle" type="CheckButton"]
margin_top = 1.0
margin_right = 24.0
margin_bottom = 20.0
rect_min_size = Vector2( 24, 19 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color_disabled = Color( 0.133333, 0.133333, 0.133333, 0.490196 )
custom_colors/font_color_focus = Color( 0.133333, 0.133333, 0.133333, 1 )
custom_colors/font_color_hover_pressed = Color( 0.133333, 0.133333, 0.133333, 1 )
custom_colors/font_color = Color( 0.133333, 0.133333, 0.133333, 1 )
custom_colors/font_color_hover = Color( 0.133333, 0.133333, 0.133333, 1 )
custom_colors/font_color_pressed = Color( 0.133333, 0.133333, 0.133333, 1 )
custom_constants/check_vadjust = -2
custom_fonts/font = ExtResource( 3 )
custom_icons/off = ExtResource( 1 )
custom_icons/on_disabled = ExtResource( 2 )
custom_icons/on = ExtResource( 1 )
custom_icons/off_disabled = ExtResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/hover_pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconOff" type="Sprite" parent="."]
position = Vector2( 7, 7 )
texture = ExtResource( 6 )
offset = Vector2( 5, 1 )

[node name="IconOn" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 7, 7 )
texture = ExtResource( 5 )
offset = Vector2( -5, 1 )

[node name="Tween" type="Tween" parent="."]

[connection signal="toggled" from="." to="." method="_on_toggled"]
